--- a/front-end/todo-native/package.json
+++ b/front-end/todo-native/package.json
@@ -10,13 +10,19 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "6.1.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "expo": "~45.0.0",
+    "expo-constants": "^13.1.1",
+    "expo-device": "^4.2.0",
+    "expo-notifications": "^0.15.4",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-date-picker": "^4.2.2",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7"
